colorazioni jumbotron bg e testo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <main>
        <!--jumbotron -->
-       <section class="">
+       <section class="bg-success bg-gradien">
             <div class="container-md">
                 <div class="text-center">
                         <img class="first-img " src="./img/avatar.svg" alt="Avatar">
@@ -57,7 +57,7 @@
                         </div>
 
                         <div>
-                            <p class="">
+                            <p class="fs-5">
                                 GRAPHIC ARTIST - WEB DESINER - ILLUSTRATOR
                             </p>
                         </div>
