inizio gestione macrostruttura portoflio 6 card

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <main>
        <!--jumbotron -->
-       <section class="bg-success bg-gradien">
+       <section class="bg-success bg-gradien  p-2 text-white bg-opacity-75">
             <div class="container-md">
                 <div class="text-center">
                         <img class="first-img " src="./img/avatar.svg" alt="Avatar">
@@ -52,8 +52,8 @@
                                 START BOOTSTRAP
                             </h1>
                         <div>
-                        <div class="">
-                            <i class="bi bi-star-fill fs-5 mx-2 mx-sm-3"></i>
+                        <div class="star">
+                            <i class="fa-solid fa-star"></i>
                         </div>
 
                         <div>
@@ -65,8 +65,22 @@
             </div>
         </section>
         
-        <section>
+        
         <!-- Portfolio -->
+        <section class="py-3 py-5">
+            <div class="container-md">
+                  <div class="text-center mb-3">
+                        <div>
+                            <h2>
+                                PORTFOLIO
+                            </h2>
+                            <div>
+                                <div class="star dark-bars">
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                            </div>
+                        </div>
+                  </div>
         </section>
 
 
