--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
        <!--jumbotron -->
        <section class="bg-success bg-gradien  p-2 text-white bg-opacity-75">
-            <div class="container-md">
+            <div class=".container-fluid">
                 <div class="text-center">
                         <img class="first-img " src="./img/avatar.svg" alt="Avatar">
 
@@ -68,19 +68,43 @@
         
         <!-- Portfolio -->
         <section class="py-3 py-5">
-            <div class="container-md">
-                  <div class="text-center mb-3">
+            <div class="container">
+                <div class="text-center mb-3">
+                    <div>
+                        <h2>
+                            PORTFOLIO
+                        </h2>
                         <div>
-                            <h2>
-                                PORTFOLIO
-                            </h2>
-                            <div>
-                                <div class="star dark-bars">
-                                    <i class="fa-solid fa-star"></i>
-                                </div>
+                            <div class="star dark-bars">
+                                <i class="fa-solid fa-star"></i>
                             </div>
                         </div>
-                  </div>
+                    </div>
+                    <div class="container">
+                        <!-- First row -->
+                        <div class="row mt-2 ">
+                            <div class="col-12 col-sm-6 col-md-4 mt-3 ">
+                                <img src="img/cabin.png" class="img-fluid" alt="Image 1 cabin">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-4 mt-3">
+                                <img src="img/cake.png" class="img-fluid" alt="Image 2 cake">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-4 mt-3">
+                                <img src="img/circus.png" class="img-fluid" alt="Image 3 circus">
+                            </div>
+                   
+                            <div class="col-12 col-sm-6 col-md-4 mt-3">
+                                <img src="img/game.png" class="img-fluid" alt="Image 4 game">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-4 mt-3">
+                                <img src="img/safe.png" class="img-fluid" alt="Image 5 safe">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-4 mt-3">
+                                <img src="img/submarine.png" class="img-fluid" alt="Image 6 submarine">
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
 
 
