macro about terminata inizio sezione contact me

--- a/index.html
+++ b/index.html
@@ -125,12 +125,16 @@
                     
                     <div class="row mt-2 ">
                         <div class="col-sm-6">
-                            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                            <p class="fs-5">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
                         </div>
                         <div class="col-sm-6">
-                            <p class="lead"> You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+                            <p class="fs-5"> You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
                         </div>
                     </div>
+                    <!-- bottone -->
+                    <button type="button" class="btn btn-outline-success btn-custom">
+                        <i class="fa-solid fa-download mr-2"></i> Download
+                    </button>
                 </div>
             </section>
        
