--- a/index.html
+++ b/index.html
@@ -15,35 +15,45 @@
 </head>
 <body>
 
-    <header class="bg-dark text-light py-4 fixed-top ">
+    <header class="bg-dark text-light py-4 fixed-top">
         <div class="container-md">
-              <div class="row">
-                    <div class="col-md-6">
-                          START BOOTSTRAP
-                    </div>
-                    <div class="col-md-6 text-md-end">
-                          <div class="container text-center">
-                                <div class="row align-items-start">
-                                  <div class="col">
-                                    PORTFOLIO
-                                  </div>
-                                  <div class="col">
-                                    ABOUT
-                                  </div>
-                                  <div class="col">
-                                    CONTACT
-                                  </div>
-                                </div>
-                          </div>
-                    </div>
-              </div>
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center">
+                    <span>START BOOTSTRAP</span>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <!-- NAV BOOTSTRAP LINK https://getbootstrap.com/docs/5.2/components/navbar/-->
+                    <nav class="navbar navbar-expand-md navbar-dark p-0">
+                        <div class="container-fluid p-0 d-flex justify-content-end">
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon  justify-content-end"></span>
+                            </button>
+                            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">PORTFOLIO</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">ABOUT</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">CONTACT</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
         </div>
-  </header>
+    </header>
+    <!-- JS Link BS for nav bar -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <main>
     <!--jumbotron -->
        <section class="bg-success bg-gradien mt-5 pt-5  p-2 text-white bg-opacity-75">
-            <div class=".container">
+            <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
                         <img class="first-img " src="./img/avatar.svg" alt="Avatar">
