--- a/index.html
+++ b/index.html
@@ -30,15 +30,22 @@
                             </button>
                             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                                 <ul class="navbar-nav">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">PORTFOLIO</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">ABOUT</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">CONTACT</a>
-                                    </li>
+                                    <!-- custom class hover css -->
+                                    <div class="bs_nav_link">
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">PORTFOLIO</a>
+                                        </li>
+                                    </div>
+                                    <div class="bs_nav_link">
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">ABOUT</a>
+                                        </li>
+                                    </div>
+                                    <div class="bs_nav_link">
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="#">CONTACT</a>
+                                        </li>
+                                    </div>
                                 </ul>
                             </div>
                         </div>
