--- a/index.html
+++ b/index.html
@@ -104,22 +104,28 @@
                         <div class="row mt-2 ">
                             <div class="col-12 col-sm-6 col-md-4 mt-3 ">
                                 <img src="img/cabin.png" class="img-fluid" alt="Image 1 cabin">
+                                <i class="fa-solid fa-plus"></i>
                             </div>
                             <div class="col-12 col-sm-6 col-md-4 mt-3">
                                 <img src="img/cake.png" class="img-fluid" alt="Image 2 cake">
+                                <i class="fa-solid fa-plus"></i>
                             </div>
                             <div class="col-12 col-sm-6 col-md-4 mt-3">
                                 <img src="img/circus.png" class="img-fluid" alt="Image 3 circus">
+                                <i class="fa-solid fa-plus"></i>
                             </div>
                    
                             <div class="col-12 col-sm-6 col-md-4 mt-3">
                                 <img src="img/game.png" class="img-fluid" alt="Image 4 game">
+                                <i class="fa-solid fa-plus"></i>
                             </div>
                             <div class="col-12 col-sm-6 col-md-4 mt-3">
                                 <img src="img/safe.png" class="img-fluid" alt="Image 5 safe">
+                                <i class="fa-solid fa-plus"></i>
                             </div>
                             <div class="col-12 col-sm-6 col-md-4 mt-3">
                                 <img src="img/submarine.png" class="img-fluid" alt="Image 6 submarine">
+                                <i class="fa-solid fa-plus"></i>
                             </div>
                         </div>
                     </div>
