--- a/index.html
+++ b/index.html
@@ -99,48 +99,62 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
                     <div class="container">
      <!-- First row -->
                         <div class="row mt-2 ">
                             <div class="col-12 col-sm-6 col-md-4 mt-3 ">
-                                <div class="position-relative img-container">
+                                <div class=" img-container">
                                     <img src="img/cabin.png" class="img-fluid" alt="Image 1 cabin">
-                                    <i class="fa-solid fa-plus plus-icon"></i>
+                                    <div class="overlay">
+                                        <i class="fa-solid fa-plus plus-icon"></i>
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="col-12 col-sm-6 col-md-4 mt-3">
-                                <div class="position-relative img-container">
+                                <div class=" img-container">
                                     <img src="img/cake.png" class="img-fluid" alt="Image 2 cake">
-                                    <i class="fa-solid fa-plus plus-icon"></i>
+                                    <div class="overlay">
+                                        <i class="fa-solid fa-plus plus-icon"></i>
+                                    </div>
                                 </div>
                             </div>
 
-                            <div class="col-12 col-sm-6 col-md-4 mt-3">ù
-                                <div class="position-relative img-container">
+                            <div class="col-12 col-sm-6 col-md-4 mt-3">
+                                <div class=" img-container">
                                     <img src="img/circus.png" class="img-fluid" alt="Image 3 circus">
-                                    <i class="fa-solid fa-plus plus-icon"></i>
+                                    <div class="overlay">
+                                        <i class="fa-solid fa-plus plus-icon"></i>
+                                    </div>
                                 </div>
                             </div>
                    
                             <div class="col-12 col-sm-6 col-md-4 mt-3">
-                                <div class="position-relative img-container">
+                                <div class=" img-container">
                                     <img src="img/game.png" class="img-fluid" alt="Image 4 game">
-                                    <i class="fa-solid fa-plus plus-icon"></i>
+                                    <div class="overlay">
+                                        <i class="fa-solid fa-plus plus-icon"></i>
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="col-12 col-sm-6 col-md-4 mt-3">
-                                <div class="position-relative img-container">
+                                <div class=" img-container">
                                     <img src="img/safe.png" class="img-fluid" alt="Image 5 safe">
-                                    <i class="fa-solid fa-plus plus-icon"></i>
+                                    <div class="overlay">
+                                        <i class="fa-solid fa-plus plus-icon"></i>
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="col-12 col-sm-6 col-md-4 mt-3">
-                                <div class="position-relative img-container">
+                                <div class=" img-container">
                                     <img src="img/submarine.png" class="img-fluid" alt="Image 6 submarine">
-                                    <i class="fa-solid fa-plus plus-icon"></i>
+                                    <div class="overlay">
+                                        <i class="fa-solid fa-plus plus-icon"></i>
+                                    </div>
                                 </div>
                             </div>
                         </div>
