inizio sistemazione bordi del forg group sezione contact me

--- a/index.html
+++ b/index.html
@@ -187,9 +187,12 @@
                         </div>
                     </div>
     <!-- bottone -->
-                    <button type="button" class="btn btn-outline-success btn-custom">
-                        <i class="fa-solid fa-download mr-2"></i> Download
-                    </button>
+    <!-- inserimento classe custom per hover e decorazione -->
+                    <div>
+                        <button type="button" class="btn btn-outline-success btn-custom ">
+                            <i class="fa-solid fa-download mr-2"></i> Download
+                        </button>
+                    </div>
                 </div>
             </section>
        
