--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <header class="bg-dark text-light py-4 fixed-top">
+    <header class="text-light py-4 fixed-top">
         <div class="container-md">
             <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center">
@@ -26,7 +26,7 @@
                     <nav class="navbar navbar-expand-md navbar-dark p-0">
                         <div class="container-fluid p-0 d-flex justify-content-end">
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon  justify-content-end"></span>
+                            <span class="navbar-toggler-icon justify-content-end"></span>
                             </button>
                             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                                 <ul class="navbar-nav">
@@ -59,7 +59,7 @@
 
     <main>
     <!--jumbotron -->
-       <section class="bg-success bg-gradien mt-5 pt-5  p-2 text-white bg-opacity-75">
+       <section class=" bg-gradien mt-5 pt-5  p-2 text-white bg-opacity-75">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -69,7 +69,7 @@
                             <h1 class="mt-3 mb-0">
                                 START BOOTSTRAP
                             </h1>
-                        <div>
+                        <!-- <div> -->
                         <div class="star">
                             <i class="fa-solid fa-star"></i>
                         </div>
@@ -165,7 +165,7 @@
 
         
     <!-- About -->
-            <section class="bg-success bg-gradien  p-2 text-white bg-opacity-75">
+            <section class=" bg-gradien  p-2 text-white bg-opacity-75">
                 <div class="container-sm">
                     <div class="text-center mb-3 mt-5">
                         <div class="text-white ">
@@ -249,7 +249,9 @@
     <!-- Submit Button -->
                     <div class="form-group row mt-2">
                         <div class="col-sm-3 offset-sm-1">
-                            <button type="submit" class="btn btn-success">Send</button>
+                            <div class="btn_submit">
+                                <button type="submit" class="btn btn-success">Send</button>
+                            </div>
                         </div>
                     </div>
                 </form>
@@ -258,7 +260,7 @@
     </main>
     <!-- Footer -->
     <footer >
-        <section class="bg-dark bg-gradient text-light text-center bg-opacity-70 py-2 mt-5">
+        <section class=" bg-gradient text-light text-center bg-opacity-70 py-2 mt-5">
             <div class="container py-4">
                 <div class="row">
     <!-- Address Section -->
@@ -296,11 +298,12 @@
                 </div>
             </div>
         </section>
-
+        <section class="copyright">
     <!-- Copyright Section -->
-        <div class="container-fluid bg-black text-light text-center py-2">
-            <p class="mb-0">© 2024 Your Company. All rights reserved.</p>
-        </div>
+            <div class="container-fluid  text-light text-center py-2">
+                <p class="mb-0">© 2024 Your Company. All rights reserved.</p>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
