--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         <div>
                             <h5 class="mb-3">ABOUT FREELANCER</h5>
                             <p class="mb-3">
-                               Freelance is a free to use, open source Bootstrap theme created by <span class="learn-more-link">Start Bootstrap</span>
+                               Freelance is a free to use, open source Bootstrap theme created by <a class="learn-more-link" href="">Start Bootstrap</a>
                             </p>
                         </div>
                     </div>
